--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-canva-improved",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "Nodo mejorado de n8n para integrar Canva Connect API con OAuth 2.0 PKCE y soporte completo para diseños, exportaciones y carpetas",
   "keywords": [
     "n8n-community-node-package",
@@ -34,7 +34,7 @@
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
     "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "dist"
@@ -45,8 +45,7 @@
       "dist/credentials/CanvaApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/Canva/Canva.node.js",
-      "dist/nodes/Canva/CanvaTrigger.node.js"
+      "dist/nodes/Canva/Canva.node.js"
     ]
   },
   "devDependencies": {
