--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-canva-improved",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "Nodo mejorado de n8n para integrar Canva Connect API con OAuth 2.0 PKCE y soporte completo para diseños, exportaciones y carpetas",
   "keywords": [
     "n8n-community-node-package",
@@ -43,11 +43,13 @@
     "n8nNodesApiVersion": 1,
     "credentials": [
       "dist/credentials/CanvaApi.credentials.js",
-      "dist/credentials/CanvaMcpApi.credentials.js"
+      "dist/credentials/CanvaMcpApi.credentials.js",
+      "dist/credentials/CanvaMcpStdio.credentials.js"
     ],
     "nodes": [
       "dist/nodes/Canva/Canva.node.js",
-      "dist/nodes/CanvaMcp/CanvaMcp.node.js"
+      "dist/nodes/CanvaMcp/CanvaMcp.node.js",
+      "dist/nodes/CanvaMcpAuth/CanvaMcpAuth.node.js"
     ]
   },
   "dependencies": {
