feat: Add auto-refresh token support and protect MCP proxy
-  Add automatic OAuth token refresh in CanvaMcp node
-  Add canva-mcp-proxy/ to .gitignore and .npmignore (private)
-  Keep Solana wallet for donations in README
-  Fix token expiration handling with expires_at timestamp
-  Improve error messages for token refresh failures
-  Update documentation with support information

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ dist
 !gulpfile.js
 !.eslintrc.js
 
+# MCP Proxy Server (CONFIDENCIAL - OAuth implementation)
+canva-mcp-proxy/
+
 # Private prompts and business logic (CONFIDENCIAL)
 prompts/
 
@@ -24,6 +27,12 @@ README-FULL.md
 test-callback.js
 *.tgz
 *.log
+
+# SSH keys and credentials (CONFIDENCIAL)
+.ssh/
+*.pem
+*.key
+id_rsa*
 
 # IDE and OS files
 .vscode/
