feat: Add funding information to package.json for npm
-  Add funding field with link to donation section
-  Enable npm to display support/sponsor button
-  Link to GitHub README support section with Solana wallet

--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "bugs": {
     "url": "https://github.com/0xAF00/n8n-nodes-canva-improved/issues"
   },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/0xAF00/n8n-nodes-canva-improved#support-development"
+  },
   "main": "index.js",
   "scripts": {
     "build": "tsc && gulp build:icons",
